Use user ID to be primary reference to a user
- Before a user was identified via sub and issuer, now we use the user
  ID. This is a big improvement to the API UX.
- Added route to delete user using the user ID
- Updated swagger docs

The next commit will fix the tests
