# web_ui/ui.go
@@ -277,7 +277,7 @@ func handleWebUIRedirect(ctx *gin.Context) {
 func handleWebUIAuth(ctx *gin.Context) {
 	requestPath := ctx.Param("requestPath")
 	db := authDB.Load()
-	user, _, _, _, err := GetUserGroups(ctx)
+	user, _, _, err := GetUserGroups(ctx)
 
 	// Skip auth check for static files other than html pages
 	if path.Ext(requestPath) != "" && path.Ext(requestPath) != ".html" {
@@ -458,7 +458,7 @@ func createApiToken(ctx *gin.Context) {
 		expirationTime = expirationTime.UTC()
 	}
 	scopes := strings.Join(req.Scopes, ",")
-	user, _, _, _, err := GetUserGroups(ctx)
+	user, _, _, err := GetUserGroups(ctx)
 	if err != nil {
 		log.Warn("Failed to get user from context")
 		ctx.JSON(http.StatusInternalServerError, server_structs.SimpleApiResp{
@@ -608,7 +608,7 @@ func configureCommonEndpoints(engine *gin.Engine) error {
 	engine.POST("/api/v1.0/groups", AuthHandler, handleCreateGroup)
 	engine.GET("/api/v1.0/groups/:id/members", AuthHandler, handleListGroupMembers)
 	engine.POST("/api/v1.0/groups/:id/members", AuthHandler, handleAddGroupMember)
-	engine.DELETE("/api/v1.0/groups/:id/members", AuthHandler, handleRemoveGroupMember)
+	engine.DELETE("/api/v1.0/groups/:id/members/:userId", AuthHandler, handleRemoveGroupMember)
 
 	engine.GET("/api/v1.0/users", AuthHandler, handleListUsers)
 	engine.POST("/api/v1.0/users", AuthHandler, handleAddUser)
